test_compiler/errors/e16.gm
Procedure foo(G: Graph)
{
    Int Y;
    Y += 3; // why error? it becomes sequential
}
